--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,8 +26,12 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
+
     // CardView and RecycleView
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
+
+    // ORMLite Android
+    compile group: 'com.j256.ormlite', name: 'ormlite-android', version: '4.48'
     testCompile 'junit:junit:4.12'
 }
