--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,13 +25,12 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
+    // Material Design
     compile 'com.android.support:design:25.3.1'
-
-    // CardView and RecycleView
+    // CardView widget
     compile 'com.android.support:cardview-v7:25.3.1'
-    compile 'com.android.support:recyclerview-v7:25.3.1'
-
     // ORMLite Android
     compile group: 'com.j256.ormlite', name: 'ormlite-android', version: '4.48'
+
     testCompile 'junit:junit:4.12'
 }
