Added user preferences to show Toast messages

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,10 @@
             android:name=".activities.NoteDetailActivity"
             android:label="@string/app_name">
         </activity>
+
+        <!-- Declare Settings Activity-->
+        <activity
+            android:name=".activities.SettingsActivity"></activity>
     </application>
 
 </manifest>
